# clank

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
depend/audio/: project_clank_test.aup3  turn_on_command_test.aup3
src/: audio.rs  brain.rs  main (conflicted copy 2023-07-18 112650).rs  main.rs  senses.rs
src/audio/: listen.rs  process.rs
src/brain/: aud_pu.rs  inner_monologue.rs
src/senses/: hearing.rs
