[package]
name = "clank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vosk = "0.2.0"
rust-bert = {version = "0.21", features = ["download-libtorch"]}
tch = "0.13"
cpal = {version = "0.15.2", features = ["jack"]}
anyhow = "1.0"
hound = "3.5"
clap = { version = "4.0", features = ["derive"] }
uuid = "1.4.1"
